@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-27T08:21:05Z",
-  "count_outdated" : 355,
-  "uniques_outdated" : 203,
-  "count" : 381,
+  "timestamp" : "2022-06-28T01:24:53Z",
+  "count_outdated" : 357,
+  "uniques_outdated" : 204,
+  "count" : 383,
   "uniques" : 221,
   "clones" : [
-    {
-      "timestamp": "2022-06-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-14T00:00:00Z",
       "count": 5,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
