@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-06-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-14T00:00:00Z",
       "count": 5,
       "uniques": 3
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2022-06-27T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
