@@ -1,3 +1,10 @@
+2022-06-28T01:24:53Z:
+* notice: last 14d: unq all: 5 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 203 355 / 221 381
+* notice: next accum: outdated-unq outdated-all / unq all: 204 357 / 221 383
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-13] / [2022-06-27]
+
 2022-06-27T08:21:05Z:
 * notice: last 14d: unq all: 5 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 203 355 / 220 381
